# Superdata

./: README.md
ex6/: CMakeLists.txt  job.sh  poisson.c
ex6/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson
havard/: CMakeLists.txt  mpi.cpp
part1/: MPI.cpp  openMP.cpp  serial.cpp
part1/havard/: CMakeLists.txt  environment.sh  jobScript.sh  mpi.cpp  openMP.cpp  runProject.sh  serial.cpp  serialAndOpenMP.cpp
part2/Latex/: .vimrc  analysis.tex  discussion.tex  kongull.tex  part2.tex  problem.tex  results.tex  solution.tex
part2/havard/: CMakeLists.txt  matrix.hh  poisson.cpp  poissonSerial.cpp  temp.cpp
part2/havard/compilerCmake/: CMakeLists.txt  compileKongull.sh  ex6.cpp  jobScript.sh
part2/kongull/: CMakeLists.txt  poisson-mpi.c
part2/kongull/compilerCmake/: CMakeLists.txt  compileKongull.sh  environment.sh  jobScript.sh
part2/magnus/: CMakeLists.txt  \  compileKongull.sh  convergence.txt  environment.sh  job.sh  job1.sh  job2.sh  job3.sh  job4.sh  plotting.R  poisson-mpi.c  pythonPlot.py  results.sh  taskbTIME.txt  taskbTIME2.txt  taskbTIME3.txt  taskc1.txt  taskc1NoMPI.txt  taskc3.txt
part2/magnus/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  mpi  poisson-mpi  run.sh
